change toppage layout

--- a/index.html
+++ b/index.html
@@ -5,15 +5,39 @@
     <meta http-equiv="x-ua-compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <script type="text/javascript" src="enchantjs/build/enchant.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <link rel="stylesheet" href="css/papier.min.css">
 </head>
 <body>
-<div><a href = "01-キャラクターを動かそう/index.html"><h2>01-キャラクターを動かそう</h2></a></div>
-<div><a href = "02-移動スピードを変えよう/index.html"><h2>02-移動スピードを変えよう</h2></a></div>
-<div><a href = "03-端で止めよう/index.html"><h2>03-端で止めよう</h2></a></div>
-<div><a href = "04-アニメーションさせよう/index.html"><h2>04-アニメーションさせよう</h2></a></div>
-<div><a href = "05-敵を表示しよう/index.html"><h2>05-敵を表示しよう</h2></a></div>
-<div><a href = "06-敵にあたったら敵を移動しよう/index.html"><h2>06-敵にあたったら敵を移動しよう</h2></a></div>
+    <h1>enchantjsを使ってゲームをつくろう</h1>
+    <div class="row">
+	<div class="col-12">
+            <button class="col-6 bg-cyan"><a href = "01-キャラクターを動かそう/index.html"><h2>01-キャラクターを動かそう</h2></a></button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <button class="col-6 bg-blue"><a href = "02-移動スピードを変えよう/index.html"><h2>02-移動スピードを変えよう</h2></a></button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <button class="col-6 bg-cyan"><a href = "03-端で止めよう/index.html"><h2>03-端で止めよう</h2></a></button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <button class="col-6 bg-blue"><a href = "04-アニメーションさせよう/index.html"><h2>04-アニメーションさせよう</h2></a></button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <button class="col-6 bg-cyan"><a href = "05-敵を表示しよう/index.html"><h2>05-敵を表示しよう</h2></a></button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <button class="col-6 bg-blue"><a href = "06-敵にあたったら敵を移動しよう/index.html"><h2>06-敵にあたったら敵を移動しよう</h2></a></button>
+        </div>
+    </div>
 </body>
 </html>
