--- a/04-アニメーションさせよう/index.html
+++ b/04-アニメーションさせよう/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <script type="text/javascript" src="enchantjs/build/enchant.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="enchantjs/plugins/ui.enchant.js"></script>
+   <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
 </body>
