--- a/index.html
+++ b/index.html
@@ -11,32 +11,32 @@
     <h1>enchantjsを使ってゲームをつくろう</h1>
     <div class="row">
 	<div class="col-12">
-            <button class="col-6 bg-cyan"><a href = "01-キャラクターを動かそう/index.html"><h2>01-キャラクターを動かそう</h2></a></button>
+            <a href = "01-キャラクターを動かそう/index.html"><button class="col-6 bg-cyan"><h2>01-キャラクターを動かそう</h2></button></a>
         </div>
     </div>
     <div class="row">
         <div class="col-12">
-            <button class="col-6 bg-blue"><a href = "02-移動スピードを変えよう/index.html"><h2>02-移動スピードを変えよう</h2></a></button>
+            <a href = "02-移動スピードを変えよう/index.html"><button class="col-6 bg-blue"><h2>02-移動スピードを変えよう</h2></button></a>
         </div>
     </div>
     <div class="row">
         <div class="col-12">
-            <button class="col-6 bg-cyan"><a href = "03-端で止めよう/index.html"><h2>03-端で止めよう</h2></a></button>
+            <a href = "03-端で止めよう/index.html"><button class="col-6 bg-cyan"><h2>03-端で止めよう</h2></button></a>
         </div>
     </div>
     <div class="row">
         <div class="col-12">
-            <button class="col-6 bg-blue"><a href = "04-アニメーションさせよう/index.html"><h2>04-アニメーションさせよう</h2></a></button>
+            <a href = "04-アニメーションさせよう/index.html"><button class="col-6 bg-blue"><h2>04-アニメーションさせよう</h2></button></a>
         </div>
     </div>
     <div class="row">
         <div class="col-12">
-            <button class="col-6 bg-cyan"><a href = "05-敵を表示しよう/index.html"><h2>05-敵を表示しよう</h2></a></button>
+            <a href = "05-敵を表示しよう/index.html"><button class="col-6 bg-cyan"><h2>05-敵を表示しよう</h2></button></a>
         </div>
     </div>
     <div class="row">
         <div class="col-12">
-            <button class="col-6 bg-blue"><a href = "06-敵にあたったら敵を移動しよう/index.html"><h2>06-敵にあたったら敵を移動しよう</h2></a></button>
+            <a href = "06-敵にあたったら敵を移動しよう/index.html"><button class="col-6 bg-blue"><h2>06-敵にあたったら敵を移動しよう</h2></button></a>
         </div>
     </div>
 </body>
